--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -6,8 +6,7 @@ on:
       - master
   pull_request:
     branches:
-      - master
-
+    - master
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -24,9 +23,12 @@ jobs:
 
       - name: Install Dependencies
         run: npm ci
+        working-directory: ./stock-price-tracker  # Set the correct path to your project directory
 
       - name: Build Angular Project
         run: npm run build
+        working-directory: ./stock-price-tracker  # Set the correct path to your project directory
 
       - name: Run Tests
         run: npm test
+        working-directory: ./stock-price-tracker  # Set the correct path to your project directory
