--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -4,7 +4,9 @@ on:
   push:
     branches:
       - master
-
+  pull_request:
+    branches:
+    - master
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -16,14 +18,17 @@ jobs:
       - name: Use Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '14'
+          node-version: '20'
           cache: 'npm'
 
       - name: Install Dependencies
         run: npm ci
+        working-directory: ./stock-price-tracker  
 
       - name: Build Angular Project
         run: npm run build
+        working-directory: ./stock-price-tracker  
 
       - name: Run Tests
         run: npm test
+        working-directory: ./stock-price-tracker  
