--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,36 +1,33 @@
-name: Build and Test
-
 on:
   push:
-    branches:
-      - master
-  pull_request:
-    branches:
-      - master
+    branches: [ "master" ]
 
 jobs:
   build:
+
     runs-on: ubuntu-latest
 
+    strategy:
+      matrix:
+        node-version: [16.x]
+
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v2
-
-      - name: Use Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '20'
-          cache: 'npm'
-
-      - name: Install Dependencies and Build Angular
-        run: |
-          cd stock-price-tracker
-          npm install
-          npm run gh-build
-        working-directory: ./stock-price-tracker
-
-      - name: Commit Changes
-        run: |
-          git add -A
-          git commit -m "Build and test Angular project"
-          git push
+    - uses: actions/checkout@v3
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v3
+      with:
+        node-version: ${{ matrix.node-version }}
+        cache: 'npm'
+    - run: npm ci
+    - run: npm run build --if-present
+    - run: npm test -- --watch=false --browsers=ChromeHeadless
+    - run: ls
+    - name: Copy to another repo
+      uses: andstor/copycat-action@v3
+      with:
+        personal_token: 'my token'
+        src_path: dist
+        dst_path: /.
+        dst_owner: notGonim
+        dst_repo_name: Github_Actions_build_repo_test
+        dst_branch: deploy
