--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,33 +1,34 @@
+name: Build and Deploy
+
 on:
   push:
-    branches: [ "master" ]
+    branches:
+      - master
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [16.x]
-
     steps:
-    - uses: actions/checkout@v3
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-    - run: npm ci
-    - run: npm run build --if-present
-    - run: npm test -- --watch=false --browsers=ChromeHeadless
-    - run: ls
-    - name: Copy to another repo
-      uses: andstor/copycat-action@v3
-      with:
-        personal_token: 'my token'
-        src_path: dist
-        dst_path: /.
-        dst_owner: notGonim
-        dst_repo_name: Github_Actions_build_repo_test
-        dst_branch: deploy
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 16
+          
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Build and Test
+        run: npm run build --if-present
+
+      - name: Copy to another repo
+        uses: andstor/copycat-action@v3
+        with:
+          personal_token: ${{ secrets.GITHUB_TOKEN }}
+          src_path: dist
+          dst_path: /.
+          dst_owner: notGonim
+          dst_repo_name: Github_Actions_build_repo_test
+          dst_branch: master
