--- a/.github/workflows/buildworkflow.yml
+++ b/.github/workflows/buildworkflow.yml
@@ -16,19 +16,18 @@ jobs:
           ref: master
           path: master
 
-      - name: Build Main
-        run: | 
-          # Replace with your actual build commands for the main project
+      - name: Build Master
+        run:
           cd master
           npm install
           npm run build
-        working-directory: ./master
+        working-directory: ./dist
 
       - name: Publish
-        run: |
+        run: 
           # Replace with your actual publish commands for the main project
           echo "Publishing main project"
-        working-directory: ./master
+        working-directory: ./publish
 
   angular:
     runs-on: ubuntu-latest
@@ -36,7 +35,8 @@ jobs:
       - name: Checkout angular repo
         uses: actions/checkout@v2
         with:
-          repository: Github_Actions_build_repo_test
+          repository: Github_Actions_build_repo_test/master
+          ref:  master
           path: master
 
       - name: Install Dependencies
@@ -51,7 +51,6 @@ jobs:
         working-directory: .
 
       - name: Publish
-        run: |
-          # Replace with your actual publish commands for the Angular project
+        run: 
           echo "Publishing Angular project"
         working-directory: .
