--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -6,52 +6,29 @@ on:
       - master
 
 jobs:
-  main:
+  build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout master repo
+      - name: Checkout
         uses: actions/checkout@v2
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
         with:
-          repository: Stock-Price-Tracker
-          ref: master
-          path: master
-
-      - name: Build Main
-        run: | 
-          # Replace with your actual build commands for the main project
-          cd master
-          npm install
-          npm run build
-        working-directory: ./master
-
-      - name: Publish
-        run: |
-          # Replace with your actual publish commands for the main project
-          echo "Publishing main project"
-        working-directory: ./master
-
-  angular:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout angular repo
-        uses: actions/checkout@v2
-        with:
-          repository: Github_Actions_build_repo_test
-          path: master
-
-      - name: Install Dependencies
-        run: 
-          cd master
-          npm ci
-
-      - name: Build Angular
-        run: npm run build --prod --base-href='angular' 
-          # Replace with your actual build commands for the Angular project
+          node-version: 16
           
-        working-directory: .
+      - name: Install dependencies
+        run: npm ci
 
-      - name: Publish
-        run: |
-          # Replace with your actual publish commands for the Angular project
-          echo "Publishing Angular project"
-        working-directory: .
+      - name: Build and Test
+        run: npm run build --if-present
+
+      - name: Copy to another repo
+        uses: andstor/copycat-action@v3
+        with:
+          personal_token: ${{ secrets.GITHUB_TOKEN }}
+          src_path: dist
+          dst_path: /.
+          dst_owner: notGonim
+          dst_repo_name: Github_Actions_build_repo_test
+          dst_branch: master
