--- a/stock-price-tracker/.github/workflows/workflow.yml
+++ b/stock-price-tracker/.github/workflows/workflow.yml
@@ -1,34 +1,52 @@
-name: Build and Deploy
+name: workflow name
 
 on:
   push:
     branches:
-      - master
+      - 'master'
 
 jobs:
   build:
+    name: Build and Test
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
+      - name: Use Node 12.x
+        uses: actions/setup-node@v1
         with:
-          node-version: 16
-          
+          node-version: '12.x'
       - name: Install dependencies
         run: npm ci
-
-      - name: Build and Test
-        run: npm run build --if-present
-
-      - name: Copy to another repo
-        uses: andstor/copycat-action@v3
+      - name: Build
+        run: npm run build:ci
+      - name: Test
+        run: npm run test:ci
+      - name: Archive build
+        if: success()
+        uses: actions/upload-artifact@v1
         with:
-          personal_token: ${{ secrets.GITHUB_TOKEN }}
-          src_path: dist
-          dst_path: /.
-          dst_owner: notGonim
-          dst_repo_name: Github_Actions_build_repo_test
-          dst_branch: master
+          name: deploy_dist
+          path: dist
+      - name: Archive code coverage result
+        if: success()
+        uses: actions/upload-artifact@v1
+        with:
+          name: deploy_coverage
+          path: coverage
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v1
+      - name: Download build
+        uses: actions/download-artifact@v1
+        with:
+          name: deploy_dist
+      - name: Deploy to GitHub Pages
+        uses: JamesIves/github-pages-deploy-action@releases/v3
+        with:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          BRANCH: gh-pages
+          FOLDER: deploy_dist/angular-demo
