--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build:ci": "ng build --prod",
+    "build:ci": "ng build ",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
