--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -27,7 +27,7 @@ jobs:
         working-directory: ./src  # Adjust the path to match your project structure
 
       - name: Copy Build to Dist
-        run: mkdir -p ./dist && cp -r ./dist/* ./dist/
+        run: mkdir -p ./build/dist && cp -r ./build/dist/* ./dist/
         working-directory: .
 
      
