--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -35,14 +35,14 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: deploy_dist
-          path: .  # Adjust the path to match your project structure
+          path: ./dist  # Adjust the path to match your project structure
 
       - name: Archive code coverage result
         if: success()
         uses: actions/upload-artifact@v2
         with:
           name: deploy_coverage
-          path: .
+          path: ./dist
 
   deploy:
     runs-on: ubuntu-latest
