--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -78,6 +78,7 @@ jobs:
           cd Github_Actions_build_repo_test
           git add .
           git commit -m "Add build files"
-          git remote add origin_with_token https://notgonim:${{ secrets.WORKFLOWPASSWORD }}@github.com/notgonim/Github_Actions_build_repo_test.git
+          git remote add origin_with_token git@github.com:notgonim/Github_Actions_build_repo_test.git
           git push origin_with_token master
+
 
