--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -62,6 +62,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v1
+        with:
+          ref: 'master'
 
       - name: Clone destination repository
         uses: actions/checkout@v2
