--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -67,8 +67,8 @@ jobs:
 
       - name: Clone destination repository
         run: |
-          git config --global user.email "mahmoud.ghonamie@orascom.com"
-          git config --global user.name "notgonim"
+          eval "$(ssh-agent -s)"
+          ssh-add ~/.ssh/id_rsa
           git clone git@github.com:notgonim/Github_Actions_build_repo_test.git ./Github_Actions_build_repo_test
         working-directory: .
 
