--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -24,7 +24,7 @@ jobs:
 
     - name: Build Angular app
       run: |
-        npm run build -- --prod
+        npm run build:ci
 
   deploy:
     runs-on: ubuntu-latest
