--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -65,10 +65,11 @@ jobs:
         with:
           ref: 'master'
 
-      - name: Clone destination repository
-        run: |
-          git clone git@github.com:notgonim/Github_Actions_build_repo_test.git ./Github_Actions_build_repo_test
-        working-directory: .
+      - name: Check out my other private repo
+        uses: actions/checkout@master
+        with:
+          repository: notgonim/Github_Actions_build_repo_test
+          token: ${{ secrets.workflowPassword }}
 
       - name: Debug Destination Directory Structure
         run: ls -R ./Github_Actions_build_repo_test
@@ -83,5 +84,5 @@ jobs:
         run: |
           git add .
           git commit -m "Add build files"
-          git push origin master
+          git push -forigin master
         working-directory: ./Github_Actions_build_repo_test
